Agregamos El Scroll Suave un JS

--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@ En las actualizaciones epidemiológicas semanales de la OMS- en inglés, se prop
 
     <script src="header.js"></script>
     <script src="button-up.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="scroll-suave.js"></script>
+
 </body>
 </html>
 
