--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="img/virus-solid.svg">
     <title>COVID-19</title>
 
     <script src="https://kit.fontawesome.com/1731f30281.js" crossorigin="anonymous"></script>
