Creacion de formulario CONTACTANOS

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="#sintomas">Sintomas</a>
                 <a href="#evolucion">Evolucion</a>
                 <a href="#prevencion">Prevencion</a>
+                <a href="/contactanos/contactanos.html">Contactanos</a>
             </nav>
         </div>
     </header>
