Estamos agregando login

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <a href="#descripcion-general">Descripcion General</a>
                 <a href="#sintomas">Sintomas</a>
                 <a href="#evolucion">Evolucion</a>
-                <a href="#prevencion">Prevencion</a>
                 <a href="#contactanos">Contactanos</a>
+                <a href="#">Login</a>
             </nav>
         </div>
     </header>
