Actualizamos y quitamos boostrap

--- a/registrar.html
+++ b/registrar.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header id="header">
-      <a href="../index.php" class="logo">Regresar</a>
+      <a href="./index.php" class="logo">Regresar</a>
     </header>
     <div class="container">
       <h2>Registro de Usuarios</h2>
