Comprimimos pdf y html

--- a/registrar.html
+++ b/registrar.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/registrar.css" />
-  </head>
-  <body>
-    <header id="header">
-      <a href="./index.php" class="logo">Regresar</a>
-    </header>
-    <div class="container">
-      <h2>Registro de Usuarios</h2>
-      <form action="./php/registrar.php" method="POST">
-        <div class="form-group">
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" required />
-        </div>
-        <div class="form-group">
-          <label for="correo">Correo electrónico:</label>
-          <input type="email" id="correo" name="correo" required />
-        </div>
-        <div class="form-group">
-          <label for="usuario">Usuario:</label>
-          <input type="text" id="usuario" name="usuario" required />
-        </div>
-        <div class="form-group">
-          <label for="contrasena">Contraseña:</label>
-          <input type="password" id="contrasena" name="contrasena" required />
-        </div>
-        <div class="form-group">
-          <label for="tipo-usuario">Tipo de Usuario:</label>
-          <select id="tipo-usuario" name="tipo-usuario" required>
-            <option value="" disabled selected>
-              Seleccione el tipo de usuario
-            </option>
-            <option value="admin">Administrador</option>
-            <option value="usuario">Usuario</option>
-          </select>
-          <span class="option">(Seleccione el tipo de usuario)</span>
-        </div>
-        <div class="form-group">
-          <button name="registrar">Registrarse</button>
-        </div>
-      </form>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><title>Document</title><link rel="stylesheet" href="./css/registrar.css"></head><body><header id="header"><a href="./index.php" class="logo">Regresar</a></header><div class="container"><h2>Registro de Usuarios</h2><form action="./php/registrar.php" method="POST"><div class="form-group"><label for="nombre">Nombre:</label><input type="text" id="nombre" name="nombre" required></div><div class="form-group"><label for="correo">Correo electrónico:</label><input type="email" id="correo" name="correo" required></div><div class="form-group"><label for="usuario">Usuario:</label><input type="text" id="usuario" name="usuario" required></div><div class="form-group"><label for="contrasena">Contraseña:</label><input type="password" id="contrasena" name="contrasena" required></div><div class="form-group"><label for="tipo-usuario">Tipo de Usuario:</label><select id="tipo-usuario" name="tipo-usuario" required><option value="" disabled="disabled" selected="selected">Seleccione el tipo de usuario</option><option value="admin">Administrador</option><option value="usuario">Usuario</option></select><span class="option">(Seleccione el tipo de usuario)</span></div><div class="form-group"><button name="registrar">Registrarse</button></div></form></div></body></html>
